--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -133,7 +133,7 @@
 .\" ========================================================================
 .\"
 .IX Title "PG_ACTIVITY 1"
-.TH PG_ACTIVITY 1 "2022-09-02" "pg_activity 3.0.0a1" "Command line tool for PostgreSQL server activity monitoring."
+.TH PG_ACTIVITY 1 "2022-09-06" "pg_activity 3.0.0a1" "Command line tool for PostgreSQL server activity monitoring."
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -357,7 +357,7 @@ required by another session. It shows following information:
 .IP "\fB\-\-rds\fR" 2
 .IX Item "--rds"
 .Vb 1
-\&        Enable support for AWS RDS (implies \-\-no\-tempfiles).
+\&        Enable support for AWS RDS (implies \-\-no\-tempfiles and filters out the rdsadmin database from space calculation).
 .Ve
 .IP "\fB\-\-output=FILEPATH\fR" 2
 .IX Item "--output=FILEPATH"
@@ -398,6 +398,8 @@ required by another session. It shows following information:
 .IX Item "--filter=FIELD:REGEX"
 .Vb 1
 \&        Filter activities with a (case insensitive) regular expression applied on selected fields. Known fields are: dbname.
+\&        
+\&        Note: It\*(Aqs possible to filter out a database with negative lookahead, eg: \*(Aq^(?!database_name)\*(Aq
 .Ve
 .IP "\fB\-\-help\fR" 2
 .IX Item "--help"
