--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -133,7 +133,7 @@
 .\" ========================================================================
 .\"
 .IX Title "PG_ACTIVITY 1"
-.TH PG_ACTIVITY 1 "2022-09-06" "pg_activity 3.0.0a1" "Command line tool for PostgreSQL server activity monitoring."
+.TH PG_ACTIVITY 1 "2022-09-07" "pg_activity 3.0.0" "Command line tool for PostgreSQL server activity monitoring."
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
