Fix typos spotted by codespell

--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -285,9 +285,9 @@ The running queries panel shows all running queries, transactions or backends
 .IP "\- \fBQuery\fR: the query." 2
 .IX Item "- Query: the query."
 .PD
-.SS "\s-1THE WAITING QUERIES PANNEL\s0"
-.IX Subsection "THE WAITING QUERIES PANNEL"
-The waiting queries view displays queries that are wainting for a lock. It
+.SS "\s-1THE WAITING QUERIES PANEL\s0"
+.IX Subsection "THE WAITING QUERIES PANEL"
+The waiting queries view displays queries that are waiting for a lock. It
 shows the following information:
 .IP "\- \fB\s-1PID\s0\fR: process id of the backend which executes the query;" 2
 .IX Item "- PID: process id of the backend which executes the query;"
@@ -314,8 +314,8 @@ shows the following information:
 .IP "\- \fBQuery\fR: the query." 2
 .IX Item "- Query: the query."
 .PD
-.SS "\s-1THE BLOCKING QUERIES PANNEL\s0"
-.IX Subsection "THE BLOCKING QUERIES PANNEL"
+.SS "\s-1THE BLOCKING QUERIES PANEL\s0"
+.IX Subsection "THE BLOCKING QUERIES PANEL"
 The blocking queries view displays the queries that lock an object which is
 required by another session. It shows following information:
 .IP "\- \fB\s-1PID\s0\fR: process id of the backend which executes the query;" 2
