Fix typos in the man page spotted by new codespell

--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -170,8 +170,8 @@ Global :
 .PD 0
 .IP "\- \fBdbs size\fR: total size of the databases (filtered);" 2
 .IX Item "- dbs size: total size of the databases (filtered);"
-.IP "\- \fBgrowth\fR: groth in B/s of the databases (filtered);" 2
-.IX Item "- growth: groth in B/s of the databases (filtered);"
+.IP "\- \fBgrowth\fR: growth in B/s of the databases (filtered);" 2
+.IX Item "- growth: growth in B/s of the databases (filtered);"
 .IP "\- \fBcache hit ratio\fR: the percentage of page read from the PostgreSQL's cache since last snapshot (filtered)." 2
 .IX Item "- cache hit ratio: the percentage of page read from the PostgreSQL's cache since last snapshot (filtered)."
 .PD
