Add new --queries-only flag for best viewport usage and performance
As there are quite many viewport customization flags, it's currently
quite tedious to set things for most compact viewport usage, when on
some terminal withing a terminal, as it quite often is on the clouds.

Other effect is that in this mode we're a bit lighter on the monitored
DB, skipping some queries.

--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -507,6 +507,11 @@ required by another session. It shows following information:
 .Vb 1
 \&        Display workers process information in header.
 .Ve
+.IP "\fB\-\-no\-inst\-info\fR" 2
+.IX Item "--queries-only"
+.Vb 1
+\&        Show only PID, user, time, waiting and query columns without any information headers.
+.Ve
 .IP "\fB\-\-refresh\fR" 2
 .IX Item "--refresh"
 .Vb 1
