--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -347,6 +347,13 @@ required by another session. It shows following information:
 .PD
 .SH "COMMAND-LINE OPTIONS"
 .IX Header "COMMAND-LINE OPTIONS"
+.SS "\s-1CONFIGURATION\s0"
+.IX Subsection "CONFIGURATION"
+.IP "\fB\-\-profile=PROFILE\fR" 2
+.IX Item "--profile=PROFILE"
+.Vb 1
+\&        Configuration profile matching a PROFILE.conf file in ${XDG_CONFIG_HOME:~/.config}/pg_activity/ or /etc/pg_activity/.
+.Ve
 .SS "\s-1OPTIONS\s0"
 .IX Subsection "OPTIONS"
 .IP "\fB\-\-blocksize=BLOCKSIZE\fR" 2
