Fix 'throughput' spelling in man page
Spotted by recent codespell.

--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -244,8 +244,8 @@ The last group displays \fBsystem information\fR:
 .PD 0
 .IP "\- \fBSwap\fR: total / free / used swap;" 2
 .IX Item "- Swap: total / free / used swap;"
-.IP "\- \fB\s-1IO\s0\fR: the number of \s-1IO\s0 per second, current Read and Write thoughput (aggregated data gathered with the psutil library);" 2
-.IX Item "- IO: the number of IO per second, current Read and Write thoughput (aggregated data gathered with the psutil library);"
+.IP "\- \fB\s-1IO\s0\fR: the number of \s-1IO\s0 per second, current Read and Write throughput (aggregated data gathered with the psutil library);" 2
+.IX Item "- IO: the number of IO per second, current Read and Write throughput (aggregated data gathered with the psutil library);"
 .IP "\- \fBLoad\fR: \s-1CPU\s0 load for the last 1, 5, 15 minutes;" 2
 .IX Item "- Load: CPU load for the last 1, 5, 15 minutes;"
 .PD
