Add a few builtin profiles
We add a "minimal", a "narrow" and a "wide" built-in profiles, shipped
with pg_activity distribution. The first two hide non-necessary columns in
the process table and the first also hides all header information. The
"wide" profile is simply the inverse of "narrow", and may be used to
switch from one's custom profile to something close to the default
behavior.

--- a/docs/man/pg_activity.pod
+++ b/docs/man/pg_activity.pod
@@ -236,7 +236,7 @@ required by another session. It shows following information:
 
 =item B<--profile=PROFILE>
 
-	Configuration profile matching a PROFILE.conf file in ${XDG_CONFIG_HOME:~/.config}/pg_activity/ or /etc/pg_activity/.
+	Configuration profile matching a PROFILE.conf file in ${XDG_CONFIG_HOME:~/.config}/pg_activity/ or /etc/pg_activity/, or a built-in profile.
 
 =back
 
