--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -133,7 +133,7 @@
 .\" ========================================================================
 .\"
 .IX Title "PG_ACTIVITY 1"
-.TH PG_ACTIVITY 1 "2024-02-20" "pg_activity 3.4.2" "Command line tool for PostgreSQL server activity monitoring."
+.TH PG_ACTIVITY 1 "2024-02-28" "pg_activity 3.4.2" "Command line tool for PostgreSQL server activity monitoring."
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -352,7 +352,7 @@ required by another session. It shows following information:
 .IP "\fB\-\-profile=PROFILE\fR" 2
 .IX Item "--profile=PROFILE"
 .Vb 1
-\&        Configuration profile matching a PROFILE.conf file in ${XDG_CONFIG_HOME:~/.config}/pg_activity/ or /etc/pg_activity/.
+\&        Configuration profile matching a PROFILE.conf file in ${XDG_CONFIG_HOME:~/.config}/pg_activity/ or /etc/pg_activity/, or a built\-in profile.
 .Ve
 .SS "\s-1OPTIONS\s0"
 .IX Subsection "OPTIONS"
