--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -133,7 +133,7 @@
 .\" ========================================================================
 .\"
 .IX Title "PG_ACTIVITY 1"
-.TH PG_ACTIVITY 1 "2023-06-01" "pg_activity 3.4.2" "Command line tool for PostgreSQL server activity monitoring."
+.TH PG_ACTIVITY 1 "2024-02-20" "pg_activity 3.4.2" "Command line tool for PostgreSQL server activity monitoring."
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -490,23 +490,25 @@ required by another session. It shows following information:
 .Vb 1
 \&        Disable App.
 .Ve
-.SS "\s-1OTHER DISPLAY OPTIONS\s0"
-.IX Subsection "OTHER DISPLAY OPTIONS"
+.SS "\s-1HEADER DISPLAY OPTIONS\s0"
+.IX Subsection "HEADER DISPLAY OPTIONS"
 .IP "\fB\-\-no\-inst\-info\fR" 2
 .IX Item "--no-inst-info"
 .Vb 1
-\&        Display instance information in header.
+\&        Hide instance information.
 .Ve
 .IP "\fB\-\-no\-sys\-info\fR" 2
 .IX Item "--no-sys-info"
 .Vb 1
-\&        Display system information in header.
+\&        Hide system information.
 .Ve
 .IP "\fB\-\-no\-proc\-info\fR" 2
 .IX Item "--no-proc-info"
 .Vb 1
-\&        Display workers process information in header.
+\&        Hide workers process information.
 .Ve
+.SS "\s-1OTHER DISPLAY OPTIONS\s0"
+.IX Subsection "OTHER DISPLAY OPTIONS"
 .IP "\fB\-\-refresh\fR" 2
 .IX Item "--refresh"
 .Vb 1
