Add a -P short form for --profile option

--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -349,8 +349,8 @@ required by another session. It shows following information:
 .IX Header "COMMAND-LINE OPTIONS"
 .SS "\s-1CONFIGURATION\s0"
 .IX Subsection "CONFIGURATION"
-.IP "\fB\-\-profile=PROFILE\fR" 2
-.IX Item "--profile=PROFILE"
+.IP "\fB\-P \s-1PROFILE\s0\fR, \fB\-\-profile=PROFILE\fR" 2
+.IX Item "-P PROFILE, --profile=PROFILE"
 .Vb 1
 \&        Configuration profile matching a PROFILE.conf file in ${XDG_CONFIG_HOME:~/.config}/pg_activity/ or /etc/pg_activity/, or a built\-in profile.
 .Ve
