Tweak the help text of --no-app-name option

--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -495,7 +495,7 @@ required by another session. It shows following information:
 .IP "\fB\-\-no\-app\-name\fR" 2
 .IX Item "--no-app-name"
 .Vb 1
-\&        Disable App.
+\&        Disable APP.
 .Ve
 .SS "\s-1HEADER DISPLAY OPTIONS\s0"
 .IX Subsection "HEADER DISPLAY OPTIONS"
