Add non-negative counterparts of --no-XXX options
We need to set the default value of "flag" options (those built using
the flag() helper function) to None in order to discriminate unspecified
option (value=None) from unset option (value=False).

--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -371,25 +371,20 @@ required by another session. It shows following information:
 .Vb 1
 \&        Store running queries as CSV.
 .Ve
-.IP "\fB\-\-no\-db\-size\fR" 2
-.IX Item "--no-db-size"
+.IP "\fB\-\-db\-size\fR, \fB\-\-no\-db\-size\fR" 2
+.IX Item "--db-size, --no-db-size"
 .Vb 1
-\&        Skip total size of DB.
+\&        Enable/disable total size of DB.
 .Ve
-.IP "\fB\-\-no\-tempfiles\fR" 2
-.IX Item "--no-tempfiles"
+.IP "\fB\-\-tempfiles\fR, \fB\-\-no\-tempfiles\fR" 2
+.IX Item "--tempfiles, --no-tempfiles"
 .Vb 1
-\&        Skip tempfile count and size.
+\&        Enable/disable tempfile count and size.
 .Ve
-.IP "\fB\-\-no\-walreceiver\fR" 2
-.IX Item "--no-walreceiver"
+.IP "\fB\-\-walreceiver\fR, \fB\-\-no\-walreceiver\fR" 2
+.IX Item "--walreceiver, --no-walreceiver"
 .Vb 1
-\&        Skip walreceiver checks.
-.Ve
-.IP "\fB\-\-no\-walreceiver\fR" 2
-.IX Item "--no-walreceiver"
-.Vb 1
-\&        Skip walreceiver checks.
+\&        Enable/disable walreceiver checks.
 .Ve
 .IP "\fB\-w, \-\-wrap\-query\fR" 2
 .IX Item "-w, --wrap-query"
@@ -442,60 +437,60 @@ required by another session. It shows following information:
 .Ve
 .SS "\s-1PROCESS DISPLAY OPTIONS\s0"
 .IX Subsection "PROCESS DISPLAY OPTIONS"
-.IP "\fB\-\-no\-pid\fR" 2
-.IX Item "--no-pid"
+.IP "\fB\-\-pid\fR, \fB\-\-no\-pid\fR" 2
+.IX Item "--pid, --no-pid"
 .Vb 1
-\&        Disable PID.
+\&        Enable/disable PID.
 .Ve
-.IP "\fB\-\-no\-database\fR" 2
-.IX Item "--no-database"
+.IP "\fB\-\-database\fR, \fB\-\-no\-database\fR" 2
+.IX Item "--database, --no-database"
 .Vb 1
-\&        Disable DATABASE.
+\&        Enable/disable DATABASE.
 .Ve
-.IP "\fB\-\-no\-user\fR" 2
-.IX Item "--no-user"
+.IP "\fB\-\-user\fR, \fB\-\-no\-user\fR" 2
+.IX Item "--user, --no-user"
 .Vb 1
-\&        Disable USER.
+\&        Enable/disable USER.
 .Ve
-.IP "\fB\-\-no\-client\fR" 2
-.IX Item "--no-client"
+.IP "\fB\-\-client\fR, \fB\-\-no\-client\fR" 2
+.IX Item "--client, --no-client"
 .Vb 1
-\&        Disable CLIENT.
+\&        Enable/disable CLIENT.
 .Ve
-.IP "\fB\-\-no\-cpu\fR" 2
-.IX Item "--no-cpu"
+.IP "\fB\-\-cpu\fR, \fB\-\-no\-cpu\fR" 2
+.IX Item "--cpu, --no-cpu"
 .Vb 1
-\&        Disable CPU%.
+\&        Enable/disable CPU%.
 .Ve
-.IP "\fB\-\-no\-mem\fR" 2
-.IX Item "--no-mem"
+.IP "\fB\-\-mem\fR, \fB\-\-no\-mem\fR" 2
+.IX Item "--mem, --no-mem"
 .Vb 1
-\&        Disable MEM%.
+\&        Enable/disable MEM%.
 .Ve
-.IP "\fB\-\-no\-read\fR" 2
-.IX Item "--no-read"
+.IP "\fB\-\-read\fR, \fB\-\-no\-read\fR" 2
+.IX Item "--read, --no-read"
 .Vb 1
-\&        Disable READ/s.
+\&        Enable/disable READ/s.
 .Ve
-.IP "\fB\-\-no\-write\fR" 2
-.IX Item "--no-write"
+.IP "\fB\-\-write\fR, \fB\-\-no\-write\fR" 2
+.IX Item "--write, --no-write"
 .Vb 1
-\&        Disable WRITE/s.
+\&        Enable/disable WRITE/s.
 .Ve
-.IP "\fB\-\-no\-time\fR" 2
-.IX Item "--no-time"
+.IP "\fB\-\-time\fR, \fB\-\-no\-time\fR" 2
+.IX Item "--time, --no-time"
 .Vb 1
-\&        Disable TIME+.
+\&        Enable/disable TIME+.
 .Ve
-.IP "\fB\-\-no\-wait\fR" 2
-.IX Item "--no-wait"
+.IP "\fB\-\-wait\fR, \fB\-\-no\-wait\fR" 2
+.IX Item "--wait, --no-wait"
 .Vb 1
-\&        Disable W.
+\&        Enable/disable W.
 .Ve
-.IP "\fB\-\-no\-app\-name\fR" 2
-.IX Item "--no-app-name"
+.IP "\fB\-\-app\-name\fR, \fB\-\-no\-app\-name\fR" 2
+.IX Item "--app-name, --no-app-name"
 .Vb 1
-\&        Disable APP.
+\&        Enable/disable APP.
 .Ve
 .SS "\s-1HEADER DISPLAY OPTIONS\s0"
 .IX Subsection "HEADER DISPLAY OPTIONS"
