Fix "wokers" typo in man page

--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -217,11 +217,11 @@ information is not related to a specific database, therefore their values will
 be zero when the data is filtered.
 .PP
 Worker processes:
-.IP "\- \fBtotal\fR: total worker count / maximum number of worker slots, parallel workers and logical replication wokers are taken from this amount (filtered);" 2
-.IX Item "- total: total worker count / maximum number of worker slots, parallel workers and logical replication wokers are taken from this amount (filtered);"
+.IP "\- \fBtotal\fR: total worker count / maximum number of worker slots, parallel workers and logical replication workers are taken from this amount (filtered);" 2
+.IX Item "- total: total worker count / maximum number of worker slots, parallel workers and logical replication workers are taken from this amount (filtered);"
 .PD 0
-.IP "\- \fBlogical wokers\fR: logical replication worker count / maximum number of logical replication wokers (filtered);" 2
-.IX Item "- logical wokers: logical replication worker count / maximum number of logical replication wokers (filtered);"
+.IP "\- \fBlogical workers\fR: logical replication worker count / maximum number of logical replication workers (filtered);" 2
+.IX Item "- logical workers: logical replication worker count / maximum number of logical replication workers (filtered);"
 .IP "\- \fBparallel workers\fR: parallel worker count for maintenance & queries / maximum number of parallel workers (filtered)." 2
 .IX Item "- parallel workers: parallel worker count for maintenance & queries / maximum number of parallel workers (filtered)."
 .PD
