Add a 'y' command to copy focused query to clipboard

--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -537,6 +537,8 @@ See: https://www.postgresql.org/docs/current/libpq\-envars.html
 .IX Item "m Sort by MEM%, descending."
 .IP "\fBt\fR     Sort by \s-1TIME+,\s0 descending." 2
 .IX Item "t Sort by TIME+, descending."
+.IP "\fBy\fR     Copy focused query to clipboard." 2
+.IX Item "y Copy focused query to clipboard."
 .IP "\fBT\fR     Change duration mode: query, transaction, backend." 2
 .IX Item "T Change duration mode: query, transaction, backend."
 .IP "\fBSpace\fR Pause on/off." 2
