Add support for Citus
We make all queries using pg_stat_activity view templated so that they
can use citus_stat_activity view when the --citus option is passed.

--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -366,6 +366,11 @@ required by another session. It shows following information:
 .Vb 1
 \&        Enable support for AWS RDS (implies \-\-no\-tempfiles and filters out the rdsadmin database from space calculation).
 .Ve
+.IP "\fB\-\-citus\fR" 2
+.IX Item "--citus"
+.Vb 1
+\&        Enable support for Citus.
+.Ve
 .IP "\fB\-\-output=FILEPATH\fR" 2
 .IX Item "--output=FILEPATH"
 .Vb 1
